# pod5-rs

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml  tarpaulin.toml
.github/workflows/: rust.yml
examples/arrow-example/: Cargo.toml
examples/arrow-example/src/: main.rs
examples/convert-to-slow5/: Cargo.toml
examples/convert-to-slow5/src/: main.rs
examples/find-all-reads/: Cargo.toml  README.md
examples/find-all-reads/src/: main.rs
examples/pod5-cp/: Cargo.toml
examples/pod5-cp/src/: main.rs
extra/: 102400-compressed.signal  102400-decompressed.signal  cp.pod5  multi_fast5_zip_v3.pod5cp.pod5  multi_fast5_zip_v4.pod5
pod5/: Cargo.toml
pod5-arrow/: Cargo.toml  README.md
pod5-arrow/src/: extract.rs  lib.rs
pod5-datafusion/: Cargo.toml  README.md
pod5-datafusion/src/: catalog.rs  error.rs  footer.rs  lib.rs  schema.rs  table.rs
pod5-footer/: Cargo.toml
pod5-footer/src/: lib.rs
pod5-format/: Cargo.toml  README.md
pod5-format/src/: error.rs  lib.rs
pod5-format/src/footer/: mod.rs
pod5-io/: Cargo.toml
pod5-io/src/: lib.rs
pod5-polars/: Cargo.toml  README.md
pod5-polars-py/: Cargo.toml  README.md  pod5_polars.pyi  pyproject.toml
pod5-polars-py/src/: lib.rs
pod5-polars-py/tests/: test_pod5_polars.py
pod5-polars/src/: lib.rs  reader.rs
pod5-polars/src/dataframe/schema/: run_info_schema.rs
pod5-tokio/: Cargo.toml
pod5/src/: error.rs  reader.rs  writer.rs
pod5/src/dataframe/: compatibility.rs  mod.rs
pod5/src/dataframe/schema/: mod.rs  reads_schema.rs  signal_schema.rs
pod5frame-py/: Cargo.toml  README.md  pod5frame.pyi  pyproject.toml
pod5frame-py/src/: lib.rs
pod5frame-py/tests/: test_pod5frame.py
src/: dataframe.rs  error.rs  footer.rs  footer_generated.rs  lib.rs  read_table.rs  reader.rs  run_info.rs  signal_table.rs  svb.rs  svb16.rs  writer.rs
src/arrow/: extract.rs  mod.rs  record.rs
src/dataframe/: compatibility.rs  converters.rs  mod.rs  signal_read_indexer.rs
src/dataframe/schema/: mod.rs  reads_schema.rs  run_info_schema.rs  signal_schema.rs
src/footer/: mod.rs
svb16/: Cargo.toml  README.md
svb16/src/: lib.rs
vbz-rs/: Cargo.toml
