[workspace]
members = [
    "pod5-polars",
    "pod5-arrow",
    "pod5-format",
    "pod5frame-py",
    "svb16",
]
resolver = "3"

[workspace.package]
authors = ["Brandon Saint-Joh <saint-john@lbl.gov>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https:://github.com/bsaintjo/pod5-rs"
keywords = ["nanopore", "genomics", "FAST5", "POD5", "sequencing"]

[workspace.dependencies]
# Error handling
thiserror = "2.0.11"

# Parsing read ids
uuid = { version = "1.14.0", features = ["v4"] }

log = "0.4.25"
eyre = "0.6.8"
flatbuffers = "24.3.25"
itertools = "0.14.0"

proptest = "1.6.0"

pod5-polars = { path = "pod5-polars"}
pod5-format = { path = "pod5-format" }
svb16 = { path = "svb16" }