[package]
name = "pod5-io"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
async-fs = "2.1.2"
futures-lite = "2.6.0"
pod5-format = { path = "../pod5-format"}
smol = "2.0.2"
thiserror.workspace = true
