[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pod5-polars"
authors = [{ name = "Brandon Saint-John" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: File Formats",
    # TODO Remove for upload to PyPI
    "Private :: Do Not Upload",
]
dynamic = ["version"]
readme = "README.md"
license = "MIT OR Apache-2.0"
dependencies = ["polars"]

[project.urls]
source = "https://github.com/bsaintjo/pod5-rs/tree/dev/pod5-polars-py"

[project.optional-dependencies]
dev = ["pytest", "pdoc"]

[tool.maturin]
features = ["pyo3/extension-module"]
