[package]
name = "pod5frame"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pod5frame"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3", "abi3-py37"] }
pod5 = { path = ".." }
svb16 = { path = "../svb16" }
pyo3-polars = "0.21.0"
