[package]
name = "convert-to-slow5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pod5 = { path = "../..", version = "0.1.0"}
pico-args = "0.5.0"
slow5 = "0.12.1"
eyre = "0.6.12"
if_chain = "1.0.2"
